# PlumSDK

./: Makefile
headers/: plam_header.h
lib/plum-abi/: Cargo.toml
lib/plum-abi/src/: lib.rs
lib/plum-formats/: Cargo.toml
lib/plum-formats/src/: coff.rs  elf.rs  lib.rs  macho.rs  pe.rs  plam.rs
lib/plum-hal/: Cargo.toml
lib/plum-hal/src/: lib.rs
lib/plum-hal/src/block/: ahci.rs  mod.rs  nvme.rs  sdhci.rs
lib/plum-hal/src/uart/: mod.rs  ns16550.rs  pl011.rs  uart16550.rs
lib/plum-hal/src/usb/: ehci.rs  mod.rs  xhci.rs
lib/ppm-core/: Cargo.toml
lib/ppm-core/src/: architecture.rs  channel.rs  config.rs  error.rs  lib.rs  operations.rs  package.rs  repository.rs  security.rs
lib/ppm-core/src/formats/: mod.rs  plpm.rs
