[package]
name = "ppm-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
sha2 = "0.10.9"
ed25519-dalek = "2.2.0"
anyhow = "1.0.100"
thiserror = "2.0.17"
plum-formats = { path = "../plum-formats" }
plum-abi = { path = "../plum-abi" }
rand = "0.9.2"
clap = { version = "4.5.51", optional = true }
dirs = "6.0.0"
tokio = { version = "1.48.0", features = ["fs"], optional = true }

[features]
default = ["cli"]
cli = ["dep:clap", "dep:tokio"]